--- a/Sw_New_mvc/Views/WIFS/Details.cshtml
+++ b/Sw_New_mvc/Views/WIFS/Details.cshtml
@@ -34,7 +34,7 @@
         <div class="block-flat">
             <div class="header">
                 <h3 style="font-weight: bold;">
-                    <b>Monthly ECCE Day Report</b> <span style="float: right;">@* <a  href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-danger">Back</a>*@
+                    <b>WIFS Report</b> <span style="float: right;">@* <a  href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-danger">Back</a>*@
                         @* @if (ViewBag.admintype != "1")*@
                         @{
                             if ((Model.approve_status == 0 || Model.approve_status == 3) || Model.approve_status == 6)
